Fix page-actions z-index on Advanced Search

--- a/asset/sass/components/advanced-search/_advanced-search.scss
+++ b/asset/sass/components/advanced-search/_advanced-search.scss
@@ -22,6 +22,8 @@
         .advanced-search-content {
             @media (min-width: $lg) {
                 margin-bottom: -128px;
+                position: relative;
+                z-index: 1;
             }
         }
     }
